General: fixed footer font visibility

--- a/themes/massively-mod/assets/scss/layout/_footer.scss
+++ b/themes/massively-mod/assets/scss/layout/_footer.scss
@@ -217,7 +217,7 @@
 #copyright {
   @include color-typography(invert);
   position: relative;
-  color: transparentize(_palette(invert, fg), 0.75);
+  color: transparentize(_palette(invert, fg), 0.1);
   cursor: default;
   font-family: _font(family-heading);
   font-size: 0.8rem;
